change the amount display to integer

--- a/DigitizingDataAdminApp/Views/Dashboard/VslaReporting.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaReporting.cshtml
@@ -35,12 +35,12 @@
                     { 
                         <tr>
                             <td>@item.VslaCode</td>
-                            <td>@item.cashFines</td>
+                            <td>@item.fCashFines</td>
                             <td>@item.formattedDateSent</td>
                             <td>@item.formattedMeetingDate</td>
-                            <td>@item.sumOfSavings</td>
-                            <td>@item.sumOfLoansIssued</td>
-                            <td>@item.sumOfLoanRepayments</td>
+                            <td>@item.fSumOfSavings</td>
+                            <td>@item.fSumOfLoansIssued</td>
+                            <td>@item.fLoanRepayment</td>
 
                         </tr>
                     }
