Changed the date displayed to be a more readable format ie dd-MMM-yyyy

--- a/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
@@ -12,7 +12,7 @@
 <div id="tabs" style="width: 100%; min-width: 1000px; margin: 0 auto; font-size: small;">
 
     <ul>
-        <li><a href="#details"><strong>Meeting held on @Model.meetingDate.Value.ToShortDateString()</strong></a></li>
+        <li><a href="#details"><strong>Meeting held on @Model.fMeetingDate</strong></a></li>
     </ul>
     <div id="details">
         <p style="text-align: right;">
