Changed the page titles

--- a/DigitizingDataAdminApp/Views/Dashboard/Dashboard.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/Dashboard.cshtml
@@ -1,6 +1,7 @@
 ﻿@model DigitizingDataAdminApp.Models.DashboardData
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
+    ViewBag.Title = "Dashboard";
 }
 <script type="text/javascript">
     $(function () {
