--- a/DigitizingDataAdminApp/Views/Dashboard/EditUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/EditUser.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "EditUser";
+    ViewBag.Title = "Edit System User";
 }
 <script type="text/javascript">
     $(function () {
