--- a/DigitizingDataAdminApp/Views/Dashboard/EditVslaGroup.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/EditVslaGroup.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "EditVsla";
+    ViewBag.Title = "Edit VSLA Group";
 }
 <script type="text/javascript">
     $(function () {
