--- a/DigitizingDataAdminApp/Views/Dashboard/GroupMemberDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/GroupMemberDetails.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
+    ViewBag.Title = "Member Details";
 }
 <script type="text/javascript">
     $(function () {
