--- a/DigitizingDataAdminApp/Views/Dashboard/SystemUsers.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/SystemUsers.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DigitizingDataAdminApp.Models.SystemUsersInformation
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "UsersData";
+    ViewBag.Title = "System Users Data";
 }
 <script type="text/javascript">
     $(function () {
