--- a/DigitizingDataAdminApp/Views/Dashboard/TechnicalTrainers.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/TechnicalTrainers.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DigitizingDataAdminApp.Models.AllTrainersInformation
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "CbtData";
+    ViewBag.Title = "Technical Trainers";
 }
 <script type="text/javascript">
     $(function () {
