--- a/DigitizingDataAdminApp/Views/Dashboard/UserDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/UserDetails.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "UserDetails";
+    ViewBag.Title = "System User Details";
 }
 <script type="text/javascript">
     $(function () {
