--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupMeetings.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupMeetings.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DigitizingDataAdminApp.Models.AllVslaMeetingInformation
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "VslaMeetings";
+    ViewBag.Title = "VSLA Group Meetings";
 }
 <script type="text/javascript">
     $(function () {
