--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupMembers.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupMembers.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DigitizingDataAdminApp.Models.AllVslaMemberInformation
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "VslaMembers";
+    ViewBag.Title = "VSLA Group Members";
 }
 <script type="text/javascript">
     $(function () {
