--- a/DigitizingDataAdminApp/Views/Dashboard/VslaReporting.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaReporting.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DigitizingDataAdminApp.Models.AllMeetingsData
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "VslaReporting";
+    ViewBag.Title = "VSLA Reporting";
 }
 <script type="text/javascript">
     $(function () {
