--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteUser.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "DeleteUser";
+    ViewBag.Title = "Delete System User";
 }
 <script type="text/javascript">
     $(function () {
