--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteVslaGroup.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteVslaGroup.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "DeleteVsla";
+    ViewBag.Title = "Delete VSLA Group";
 }
 <script type="text/javascript">
     $(function () {
