--- a/DigitizingDataAdminApp/Views/Dashboard/EditTrainerDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/EditTrainerDetails.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "EditCbt";
+    ViewBag.Title = "Edit Trainer Details";
 }
 
 <script type="text/javascript">
