--- a/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DigitizingDataAdminApp.Models.AllSingleMeetingInfo
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "SingleMeetingDetails";
+    ViewBag.Title = "Meeting Details";
 }
 <script type="text/javascript">
     $(function () {
