--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupDetails.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_MainLayout.cshtml";
-    ViewBag.Title = "VslaDetails";
+    ViewBag.Title = "VSLA Group Details";
 }
 <script type="text/javascript">
     $(function () {
