--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupInformation.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupInformation.cshtml
@@ -126,7 +126,7 @@
                 </tr>
                 <tr>
                     <td><strong>@Html.DisplayName("Physical Address")</strong></td>
-                    <td>@Html.TextBoxFor(model => model.PhysicalAddress)</td>
+                    <td>@Html.TextBoxFor(model => model.PhysicalAddress, new { @Placeholder = "e.g Behind the grain mill" })</td>
                 </tr>
                 <tr>
                     <td><strong>@Html.DisplayName("Phone MSISDN")</strong></td>
@@ -138,7 +138,7 @@
                 </tr>
                 <tr>
                     <td><strong>@Html.DisplayName("Contact Person")</strong></td>
-                    <td>@Html.TextBoxFor(model => model.ContactPerson)</td>
+                    <td>@Html.TextBoxFor(model => model.ContactPerson, new { @placeholder="e.g John Doe"})</td>
                 </tr>
                 <tr>
                     <td><strong>@Html.DisplayName("Position of Contact Person in VSLA")</strong></td>
@@ -158,7 +158,7 @@
                 </tr>
                 <tr>
                     <td><strong>@Html.DisplayName("Group Account Number")</strong></td>
-                    <td>@Html.TextBoxFor(model => model.GroupAccountNumber)</td>
+                    <td>@Html.TextBoxFor(model => model.GroupAccountNumber, new {@placeholder="e.g 1234567890" })</td>
                 </tr>
             </table>
             <p>
