Renamed placeholder for bank account

--- a/DigitizingDataAdminApp/Views/Dashboard/EditVslaGroup.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/EditVslaGroup.cshtml
@@ -83,7 +83,7 @@
                 </tr>
                 <tr>
                     <td><strong>@Html.DisplayName("Group Acount Number")</strong></td>
-                    <td>@Html.TextBoxFor(model => model.GroupAccountNumber, new { @placeholder = "1234567890" })</td>
+                    <td>@Html.TextBoxFor(model => model.GroupAccountNumber, new { @placeholder = " e.g 1234567890" })</td>
                 </tr>
             </table>
             <p>
