Added all javascript  into one header file

--- a/DigitizingDataAdminApp/Views/Shared/_MainLayout.cshtml
+++ b/DigitizingDataAdminApp/Views/Shared/_MainLayout.cshtml
@@ -50,6 +50,9 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('#data-table').dataTable();
+            $('#data-table1').dataTable();
+            $("#tabs").tabs();
+            $('.datepicker').datepicker();
         });
     </script>
 
