--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupInformation.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupInformation.cshtml
@@ -3,21 +3,11 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
     ViewBag.Title = "Vsla Groups Information";
 }
-<script type="text/javascript">
-    $(function () {
-        $("#tabs").tabs();
-    });
-</script>
-<script type="text/javascript">
-    $(function () {
-        $('.datepicker').datepicker(); //Initialise any date pickers
-    });
-</script>
-
 <div id="tabs" style="width: 100%; min-width: 1000px; margin: 0 auto; font-size: small;">
 
     <ul>
         <li><a href="#allgroups">VSLA Groups</a></li>
+        <li><a href="#groupsuppport">Group Support</a></li>
         <li><a href="#addnewgroup">Add New VSLA Group</a></li>
     </ul>
 
@@ -95,6 +85,32 @@
         </div>
     </div>
 
+    <div id="groupsuppport">
+        <div style="width: auto; min-width: 900px; margin: 0 auto;">
+            <table class="display" style="width: 100%; font-size: small;" id="data-table1">
+                <thead>
+                    <tr>
+                        <th>Group Name</th>
+                        <th>Trainer's name</th>
+                        <th>Support Type</th>
+                        <th>Support Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.groupSupportProvided)
+                    { 
+                        <tr>
+                            <td>@item.GroupName</td>
+                            <td>@item.TrainerName</td>
+                            <td>@item.SupportType</td>
+                            <td>@item.fSupportDate</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+
     <div id="addnewgroup">
         <p style="text-align: right;"><strong>@Html.ActionLink("Back", "VslaGroupInformation")</strong></p>
         @using (Html.BeginForm("AddVslaGroup", "Dashboard", FormMethod.Post, new { id = "addnewgroup" }))
@@ -138,7 +154,7 @@
                 </tr>
                 <tr>
                     <td><strong>@Html.DisplayName("Contact Person")</strong></td>
-                    <td>@Html.TextBoxFor(model => model.ContactPerson, new { @placeholder="e.g John Doe"})</td>
+                    <td>@Html.TextBoxFor(model => model.ContactPerson, new { @placeholder = "e.g John Doe" })</td>
                 </tr>
                 <tr>
                     <td><strong>@Html.DisplayName("Position of Contact Person in VSLA")</strong></td>
@@ -158,7 +174,7 @@
                 </tr>
                 <tr>
                     <td><strong>@Html.DisplayName("Group Account Number")</strong></td>
-                    <td>@Html.TextBoxFor(model => model.GroupAccountNumber, new {@placeholder="e.g 1234567890" })</td>
+                    <td>@Html.TextBoxFor(model => model.GroupAccountNumber, new { @placeholder = "e.g 1234567890" })</td>
                 </tr>
             </table>
             <p>
@@ -213,7 +229,6 @@
             @Scripts.Render("~/bundles/jqueryval")
         }
     </div>
-
 </div>
 
 
