Added clear heading for the training modules page

--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupInformation.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupInformation.cshtml
@@ -86,6 +86,7 @@
     </div>
 
     <div id="groupsuppport">
+        <h6 style="text-align:center;"><strong>Support Modules Offered to the Groups</strong></h6>
         <div style="width: auto; min-width: 900px; margin: 0 auto;">
             <table class="display" style="width: 100%; font-size: small;" id="data-table1">
                 <thead>
