Code clean up and migrating data export from using EF to FluentHibernate

--- a/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
@@ -11,7 +11,7 @@
     </ul>
     <div id="details">
         <p style="text-align: right;">
-            <a href="@Url.Action("ExportSingleMeetingDetailsCSV", "Dashboard", new { id = @Model.vslaId })">
+            <a href="@Url.Action("Export_MeetingDetails", "Dashboard", new { id = @Model.vslaId })">
                 <strong>Export to CSV</strong>
             </a>
             |
