--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupInformation.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupInformation.cshtml
@@ -13,7 +13,7 @@
 
     <div id="allgroups">
         <p style="text-align: right;">
-            <a href="@Url.Action("ExportVSLAsToCSV", "Dashboard")"><strong>Export to CSV</strong></a>
+            <a href="@Url.Action("Export_Vslas", "Dashboard")"><strong>Export to CSV</strong></a>
         </p>
 
         <div style="width: auto; min-width: 900px; margin: 0 auto;">
