--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupDetails.cshtml
@@ -75,6 +75,10 @@
                 <td><strong>@Html.DisplayName("Group Account Number")</strong></td>
                 <td>@Html.DisplayFor(model => model.GroupAccountNumber)</td>
             </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Number Of Years With LedgerLink")</strong></td>
+                <td>@Html.DisplayFor(model => model.NumberOfCycles)</td>
+            </tr>
         </table>
     </div>
 
