--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupDetails.cshtml
@@ -79,6 +79,10 @@
                 <td><strong>@Html.DisplayName("Number Of Years With LedgerLink")</strong></td>
                 <td>@Html.DisplayFor(model => model.NumberOfCycles)</td>
             </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Percentage Of Women")</strong></td>
+                <td>@Html.DisplayFor(model => model.percentageOfWomen)</td>
+            </tr>
         </table>
     </div>
 
