--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupDetails.cshtml
@@ -83,6 +83,10 @@
                 <td><strong>@Html.DisplayName("Percentage Of Women")</strong></td>
                 <td>@Html.DisplayFor(model => model.percentageOfWomen)</td>
             </tr>
+            <tr>
+                <td><strong>@Html.DisplayName("Group Maturity")</strong></td>
+                <td>@Html.DisplayFor(model => model.groupMaturity)</td>
+            </tr>
         </table>
     </div>
 
