Added new functionality for project implementers

--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteVslaGroup.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteVslaGroup.cshtml
@@ -74,6 +74,10 @@
                 <td><strong>@Html.DisplayName("Number Of Cycles With LedgerLink")</strong></td>
                 <td>@Html.DisplayFor(model => model.NumberOfCycles)</td>
             </tr>
+             <tr>
+                <td><strong>@Html.DisplayName("Project Implementers")</strong></td>
+                <td>@Html.DisplayFor(model => model.ImplementerName)</td>
+            </tr>
         </table>
         <p>
             @using (Html.BeginForm())
