--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupInformation.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupInformation.cshtml
@@ -86,7 +86,7 @@
     </div>
 
     <div id="groupsuppport">
-        <h6 style="text-align:center;"><strong>Support Modules Offered to the Groups</strong></h6>
+        <h6 style="text-align: center;"><strong>Support Modules Offered to the Groups</strong></h6>
         <div style="width: auto; min-width: 900px; margin: 0 auto;">
             <table class="display" style="width: 100%; font-size: small;" id="data-table1">
                 <thead>
@@ -180,6 +180,10 @@
                 <tr>
                     <td><strong>@Html.DisplayName("Number Of Cycles with LedgerLink")</strong></td>
                     <td>@Html.TextBoxFor(model => model.NumberOfCycles, new { @placeholder = "e.g 2" })</td>
+                </tr>
+                <tr>
+                    <td><strong>@Html.DisplayName("Project Implementer")</strong></td>
+                    <td>@Html.DropDownList("ImplementerId", Model.Implementers, new { @style = "width:185px;" }) </td>
                 </tr>
             </table>
             <p>
