Added display for single meeting information

--- a/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
@@ -36,7 +36,7 @@
                     @foreach (var item in Model.allMeetingData)
                     { 
                         <tr>
-                            <td>@item.Id</td>
+                            <td>@item.memberId</td>
                             <td>@item.memberName</td>
                             <td>@item.isPresent</td>
                             <td>@item.fAmountSaved</td>
