--- a/DigitizingDataAdminApp/Views/Dashboard/VslaGroupInformation.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaGroupInformation.cshtml
@@ -7,6 +7,7 @@
 
     <ul>
         <li><a href="#allgroups">VSLA Groups</a></li>
+        <li><a href="#flaggedgroups">Flagged Groups</a></li>
         <li><a href="#groupsuppport">Group Support</a></li>
         <li><a href="#addnewgroup">Add New VSLA Group</a></li>
     </ul>
@@ -51,7 +52,6 @@
                     {
                         if (@Model.sessionUserLevel == 1)
                         {
-                            @** :#d7d3d3 **@
                         <tr>
                             <td>@item.VslaId </td>
                             <td>@item.VslaName </td>
@@ -85,7 +85,44 @@
             </table>
         </div>
     </div>
+    <div id="flaggedgroups">
+        <p style="text-align: right;">
+            <a href="@Url.Action("Export_Vslas", "Dashboard")"><strong>Export to CSV</strong></a>
+        </p>
 
+        <div style="width: auto; min-width: 900px; margin: 0 auto;">
+            <table class="display" style="width: 100%; font-size: small;" id="data-table2">
+                <thead>
+
+                    <tr>
+                        <th>ID</th>
+                        <th>VSLA Name</th>
+                        <th>VSLACode</th>
+                        <th>Overdue days</th>
+                        <th>Details</th>
+                    </tr>
+
+
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.AllGroupsList)
+                    {
+                        if (item.lastDateSubmittedData > 90)
+                        {
+                        <tr>
+                            <td>@item.VslaId </td>
+                            <td>@item.VslaName </td>
+                            <td>@item.VslaCode </td>
+                            <td>@item.lastDateSubmittedData</td>
+                            <td><a href="@Url.Action("VslaGroupDetails", "Dashboard", new { id = item.VslaId })">
+                                <img  src="@Url.Content("~/Content/Images/details.png")"/></a></td>
+                        </tr>
+                        }
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
     <div id="groupsuppport">
         <h6 style="text-align: center;"><strong>Support Modules Offered to the Groups</strong></h6>
         <div style="width: auto; min-width: 900px; margin: 0 auto;">
