Code changes to improve data renderinf

--- a/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
@@ -28,8 +28,8 @@
                         <th>Loan  Number</th>
                         <th>Loan  Amount</th>
                         <th>Fines</th>
-                        <th>Loan  Cleared</th>
-                        <th>Loan Outstanding</th>
+                        <th>Loan Repayment</th>
+                        <th>Outstanding Loan</th>
                     </tr>
                 </thead>
                 <tbody>
